# ARCADIA

./: .gitignore  AGENTDB_IMPLEMENTATION_REPORT.md  ARCADIA_COMPLETE_IMPLEMENTATION.md  BUILD_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEEP_CODE_REVIEW.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  OPTIMIZATION_SUMMARY.md  README.md  README_WHITEPAPER.md  TEST_SUMMARY.md  VERIFICATION.md  config.example.toml  package.json
.cargo/: config.toml
.github/workflows/: test.yml
benches/: ai_decision_making.rs  ai_systems.rs  cache_performance.rs  code_dna.rs  game_elements.rs  goap_benchmark.rs  memory_allocation.rs  system_benchmark.rs  vector_index.rs  vector_operations.rs
docs/: AGENTDB_INTEGRATION.md  DEPLOYMENT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_STATUS.md  README.md
docs/architecture/: AI_SYSTEMS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REPORT.md  GOAP_SYSTEM.md  INTEGRATION_GUIDE.md  STRUCTURE.md  SUMMARY.md  SYSTEM_DIAGRAMS.md  overview.md
docs/implementation/: CORE_IMPLEMENTATION_COMPLETE.md
docs/integration/: unreal-engine-5.md
docs/publication/: PUBLICATION_CHECKLIST.md  PUBLICATION_REPORT.md
docs/testing/: BENCHMARK_RESULTS.md  TESTING.md  TEST_COMMANDS.md  TEST_VALIDATION_REPORT.md
docs/tutorials/: 01-first-game.md
examples/: goap_npc_behavior.rs  npc_ai_example.rs
examples/agentdb_nodejs/: README.md  example.js  package.json
examples/agentdb_wasm/: README.md  index.html
examples/ai_npc/: main.rs
examples/basic_game/: main.rs
scripts/: run_tests.sh
src/: ai_systems.rs  authentication.rs  cache.rs  code_dna.rs  game_elements.rs  lib.rs  main.rs  main_new.rs  memory.rs  metrics.rs  vector_index.rs
src/agentdb/: README.md  experience_replay.rs  learning_database.rs  memory_persistence.rs  mod.rs  wasm_bindings.rs
src/ai/: autopoetic.rs  emotion.rs  evolutionary.rs  goap.rs  mod.rs  neo_cortex.rs  self_awareness.rs  symbolic.rs
src/aitoml/: mod.rs
src/auth/: mod.rs
src/game_components/: code_dna.rs  components.rs  game_world.rs  mod.rs
src/paris/: feedback.rs  layers.rs  learning.rs  mod.rs  optimization.rs
src/validation/: component_validator.rs  config_validator.rs  data_integrity.rs  mod.rs  security_validator.rs
src/vector_index/: mod.rs
src/vivian/: distributed.rs  mod.rs  network.rs  storage.rs  vector_index.rs
tests/: README.md  agentdb_integration_test.rs  ai_integration_tests.rs  integration_tests.rs
tests/fixtures/: mod.rs  test_config.toml
tests/integration/: game_workflow_test.rs  validation_integration_test.rs
