[package]
name = "arcadia"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Reuven Cohen <ruv@ruvnet.com>"]
description = "AI-driven game engine with VIVIAN and PARIS frameworks for dynamic, adaptive gaming experiences with AgentDB learning"
documentation = "https://docs.rs/arcadia"
homepage = "https://ruv.io/arcadia"
repository = "https://github.com/ruvnet/ARCADIA"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["game-engine", "ai", "vector-index", "adaptive", "procedural"]
categories = ["game-engines", "simulation"]
exclude = [
    ".github/",
    ".claude/",
    ".claude-flow/",
    ".hive-mind/",
    ".swarm/",
    "memory/",
    "coordination/",
    "docs/",
    ".gitignore",
    ".replit",
    ".mcp.json",
    "replit.nix",
    "claude-flow",
    "run_tests.sh",
    "config.example.toml",
    "*.md",
    "!README.md",
    "!CHANGELOG.md",
]

[lib]
name = "arcadia"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "rlib"]

[[bin]]
name = "arcadia-demo"
path = "src/main_new.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP client and server
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# OpenAI API integration
async-openai = "0.24"

# OAuth2 authentication
oauth2 = "4.4"

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "postgres"] }

# Vector database client
qdrant-client = "1.11"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Configuration management
config = "0.14"

# Security and encryption
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9.3"

# Concurrent data structures
dashmap = "6.1"
parking_lot = "0.12"

# Vector operations
ndarray = "0.16"

# Workflow and state machine
serde_yaml = "0.9"

# WASM support for agentdb integration
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "Storage"] }
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.6"

# IndexedDB for browser storage
rexie = "0.5"

# WASM serialization
bincode = "1.3"

[dev-dependencies]
mockito = "1.5"
wiremock = "0.6"
tokio-test = "0.4"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
